fixing spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,3 +437,7 @@ iframe {
         border-style: dotted;
     }
 }
+
+.error {
+    color: red;
+}
